# rust-sunrise

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: noon.rs  sunrise.rs
