[package]
name = "sunrise"
version = "1.0.0"
authors = ["Nathan Osman <nathan@quickmediasolutions.com>"]
description = "Sunrise and sunset calculator"
repository = "https://github.com/nathan-osman/rust-sunrise"
readme = "README.md"
categories = ["date-and-time"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "nathan-osman/rust-sunrise" }

[dependencies]
jiff = "0.1.0"

[dev-dependencies]
approx = "0.3.0"
